--- a/etc/calamares/modules/packages.conf
+++ b/etc/calamares/modules/packages.conf
@@ -214,7 +214,7 @@ operations:
     - adk-system-installation-git
     - squashfs-tools
     - mkinitcpio-archiso
-    - discover
+#    - discover
     - vim
     - mkinitcpio-openswap
     - adk-calamares
