--- a/etc/calamares/modules/packages.conf
+++ b/etc/calamares/modules/packages.conf
@@ -223,3 +223,8 @@ operations:
     - intel-ucode
     - adk-live-rescue-git
     - zsh
+    - arch-install-scripts
+    - archinstall
+    - gnome-desktop-4
+    - gnome-desktop-common
+    - xdg-desktop-portal-gnome
